# workshop_kafka_streaming

./: .env-example  README.md  anotacoes.txt  docker-compose.yml  pyproject.toml
kafka-consumer/: kafka-consumer.py  messages.csv
kafka-market-project/: README.md  docker-compose.yml
kafka-market-project/consumer/: consumer.py  dockerfile
kafka-market-project/dashboard/: dashboard.py  dockerfile
kafka-market-project/producer/: dockerfile  producer.py
kafka-producer/: kafka-producer.py
