[project]
name = "workshop-kafka-streaming"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Soares",email = "marcosjmsoares@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
