[project]
name = "workshop-kafka-streaming"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Soares",email = "marcosjmsoares@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.12.2,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
